# a-better-notion

./: .gitignore  Cargo.toml  Dockerfile  README.md  Server.toml  default_11244357594231694165_0_59465.profraw  default_11244357594231694165_0_60175.profraw  default_11244357594231694165_0_60391.profraw  default_11244357594231694165_0_61559.profraw  default_11244357594231694165_0_62042.profraw  default_11244357594231694165_0_62338.profraw  default_11244357594231694165_0_63555.profraw  default_11244357594231694165_0_65744.profraw  default_11244357594231694165_0_66092.profraw  default_11244357594231694165_0_66275.profraw  default_11264598925197632047_0_60391.profraw  default_11264598925197632047_0_62338.profraw  default_11264598925197632047_0_66275.profraw  default_11488894020909919536_0_60391.profraw  default_11488894020909919536_0_62338.profraw  default_11488894020909919536_0_66275.profraw  default_11674107262960124215_0_60391.profraw  default_11674107262960124215_0_62338.profraw  default_11674107262960124215_0_66275.profraw  default_12209628964348851588_0_60175.profraw  default_12209628964348851588_0_62042.profraw  default_12209628964348851588_0_66092.profraw  default_12295025912058727161_0_60391.profraw  default_12295025912058727161_0_62338.profraw  default_13410829330307847606_0_60175.profraw  default_13410829330307847606_0_60391.profraw  default_13410829330307847606_0_62042.profraw  default_13410829330307847606_0_62338.profraw  default_13410829330307847606_0_66092.profraw  default_13410829330307847606_0_66275.profraw  default_13920146771696941224_0_60175.profraw  default_13920146771696941224_0_60391.profraw  default_13920146771696941224_0_62042.profraw  default_13920146771696941224_0_62338.profraw  default_13920146771696941224_0_66092.profraw  (+49 more)
.github/workflows/: clippy-coverage.yml  coverage.yml  lint-clippy.yml  make-server-docker-release.yml
client/: Cargo.toml  Server.toml  default_7917092135805008445_0_63525.profraw  lcov.info
client/abn-client/: Cargo.toml
client/src/: event_handler.rs  main.rs  mid.rs  term.rs  ui.rs
client/src/ui/: login.rs  task_create_popup.rs  task_delete_popup.rs  task_edit_popup.rs  task_list.rs  task_popup.rs  task_views_popup.rs  view_list.rs  views_popup.rs
client/src/ui/task_list/: task_popup.rs
client/src/ui/ui_events/: delete_task_event.rs
client/src/ui/view_list/: view_popup.rs
common/: Cargo.toml  default_15769386266879361095_0_63535.profraw
common/src/: backend-api.rs  backend.rs  lib.rs
design/: automation_sequence_diagram.puml  backend_sequences.puml  filter_sequence_diagram.wsd  middleware.puml  middleware_sequences.puml  update_sequence_diagram.wsd
server/: Cargo.toml  Dockerfile  Server.toml  docker-compose.yml
server/.abn_settings/: Settings.toml
server/abn-server/: Cargo.toml
server/abn-server/src/web-server/: database.puml
server/database/: Dockerfile  createTable.sql  docker-compose.yml
server/src/: api.rs  main.rs
server/src/database/: dependency.rs  lib.rs  mod.rs  task.rs  task_bool_property.rs  task_date_property.rs  task_num_property.rs  task_property.rs  task_string_property.rs  user.rs  view.rs
server/src/tests/: end_to_end.test.rs  test_create.rs  test_delete.rs  test_filter.rs  test_props.rs  test_tasks.rs  test_update.rs  test_views.rs  testcontainer_common_utils.rs
server/test/: api.test.rs
