[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Middleware Structs
slotmap = { version = "1.0.7", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
# Middleware Async
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } # use older version for tracing

# Local
common = {path = "../common"}

# UI
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = { version = "0.26.1", features = ["crossterm"] }
color-eyre = "0.6.3"
thiserror = "1.0.58"
num-modular = "0.6.1"
futures = "0.3.30"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest-tracing = "0.4.8"
reqwest-middleware = "0.2.5"
flexi_logger = "0.28.0"
log = "0.4.21"

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
mockito = "1.4.0"


