[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "with-chrono", "with-json", "with-uuid"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4"
env_logger = "0.11.3"
log = "0.4.21"
cargo-llvm-cov = "0.6.8"
# Local
common = {path = "../common"}
llvm-tools = "0.1.1"
actix-settings = "0.7.1"
client = { version = "0.1.0", path = "../client" }
project-root = "0.2.2"
[dev-dependencies]
coverage-helper = "0.2"

[build]
rustflags = ["-C instrument-coverage"]

[env]
